@@ -78,6 +78,12 @@ else
       ORBSingletonClass_PROP="-Dorg.omg.CORBA.ORBSingletonClass=$ORB_SINGLETON_CLASS_PROP"
    fi
 
-   $JDK_HOME/bin/java $ORBClass_PROP $ORBSingletonClass_PROP -Djava.security.policy="$TWEEK_BASE_DIR/share/tweek/java/java.security.policy.txt" -DTWEEK_BASE_DIR="${TWEEK_BASE_DIR}" $EXTRA_JDK_ARGS org.vrjuggler.tweek.Tweek "$@"
+   if test `uname` = "Darwin" ; then
+      : ${APP_NAME='Tweek'}
+      plaf="-Xdock:name=$APP_NAME -Dapple.laf.useScreenMenuBar=true"
+      plaf="$plaf -Dcom.apple.mrj.application.apple.menu.about.name=$APP_NAME"
+   fi
+
+   $JDK_HOME/bin/java $ORBClass_PROP $ORBSingletonClass_PROP -Djava.security.policy="$TWEEK_BASE_DIR/share/tweek/java/java.security.policy.txt" $plaf -DTWEEK_BASE_DIR="${TWEEK_BASE_DIR}" $EXTRA_JDK_ARGS org.vrjuggler.tweek.Tweek "$@"
    status=0
 fi
